<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/votarString"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal|top" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/ic_launcher"
            android:layout_marginTop="51dp"
            android:minHeight="150dp"
            android:minWidth="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/stringvotarfoto" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/retostringvotar"
            android:id="@+id/textView19"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/imageView4"
            android:layout_alignEnd="@+id/imageView4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/descpvotarstring"
            android:id="@+id/textView20"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/textView19"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/superadostringvotar"
            android:id="@+id/button"
            android:layout_marginBottom="42dp"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/textView19"
            android:layout_alignStart="@+id/textView19" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nosuperadostringvotar"
            android:id="@+id/button2"
            android:layout_alignTop="@+id/button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="41dp"
            android:layout_marginEnd="41dp" />
    </RelativeLayout>
</FrameLayout>