<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/perfilString"
        android:id="@+id/textView6"
        android:layout_gravity="center_horizontal|top" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left|top">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/ic_launcher"
            android:layout_marginTop="48dp"
            android:minHeight="150dp"
            android:minWidth="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/stringfoto" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/stringjuanito"
            android:id="@+id/textView16"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/imageView3"
            android:layout_alignEnd="@+id/imageView3"
            android:layout_marginRight="57dp"
            android:layout_marginEnd="57dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/strngagent"
            android:id="@+id/textView17"
            android:layout_below="@+id/textView16"
            android:layout_alignLeft="@+id/textView16"
            android:layout_alignStart="@+id/textView16"
            android:layout_marginTop="53dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/stringaficiones"
            android:id="@+id/textView18"
            android:layout_below="@+id/textView17"
            android:layout_alignLeft="@+id/textView17"
            android:layout_alignStart="@+id/textView17"
            android:layout_marginTop="39dp" />
    </RelativeLayout>
</FrameLayout>