<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainfragmentstring"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal|top" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maincocacola"
            android:id="@+id/cocabutton"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="82dp"
            android:minHeight="70dp"
            android:minWidth="350dp"
            android:textSize="25sp"
            android:backgroundTint="#f44308" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chipsmain"
            android:id="@+id/chipsbutton"
            android:layout_marginTop="41dp"
            android:minHeight="70dp"
            android:minWidth="350dp"
            android:textSize="25sp"
            android:backgroundTint="#f44308"
            android:layout_below="@+id/cocabutton"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</FrameLayout>